# scuva

./: .gitignore  README.md  pyproject.toml
example/: scurvy_test.ipynb
src/scuva/: __init__.py  text.py
src/scuva/graphing/: __init__.py  composition.py  legend.py  umap.py
test/: scuva_test.ipynb
